# vertex-ai-pipeline-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: release-drafter.yml
.github/actions/build-deploy/: action.yaml
.github/actions/slack/: action.yaml
.github/workflows/: prod.yaml  release.yaml  stg.yaml  test.yaml  versioning.yaml
infra/scripts/: setup_gcp_project.sh
infra/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
infra/terraform/environments/prod/: .terraform.lock.hcl  prod.auto.tfvars
infra/terraform/environments/test/: .terraform.lock.hcl  test.auto.tfvars
src/: env.py
src/components/operator/add/: component.py
src/components/operator/multiply/: component.py
src/containers/operator/add/: launcher.py
src/containers/operator/multiply/: launcher.py
src/logics/: file.py
src/logics/gcloud/: vertex.py
src/pipelines/: calculation1.py  calculation2.py
tests/: env.py  env_test.py
tests/logics/: file_test.py
tests/logics/gcloud/: vertex_test.py
